--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,17 +1,17 @@
 {
   "manifest_version": 3,
-  "name": "Youversion Web v3",
+  "name": "Youversion Web - Filter notes & bookmarks",
   "description": "Web Browser extension for YouVersion Bible App, to help make notes, bookmarks, and highlights more filterable among others.",
-  "version": "1.0",
+  "version": "1.0.3",
   "action": {
     "default_popup": "index.html",
-    "default_icon": "images/cartoon.png"
+    "default_icon": "images/youversion-search-128.png"
   },
   "icons": {
-    "16": "images/cartoon.png",
-    "32": "images/cartoon.png",
-    "48": "images/cartoon.png",
-    "128": "images/cartoon.png"
+    "16": "images/youversion-search-16.png",
+    "32": "images/youversion-search-32.png",
+    "48": "images/youversion-search-48.png",
+    "128": "images/youversion-search-128.png"
   },
   "content_scripts": [
     {
